--- a/services/pom.xml
+++ b/services/pom.xml
@@ -23,11 +23,11 @@
   <parent>
     <artifactId>crowdin-addon</artifactId>
     <groupId>org.exoplatform.addons.crowdin</groupId>
-    <version>5.0.x-SNAPSHOT</version>
+    <version>5.0.0</version>
   </parent>
   <groupId>org.exoplatform.addons.crowdin</groupId>
   <artifactId>crowdin-services</artifactId>
-  <version>5.0.x-SNAPSHOT</version>
+  <version>5.0.0</version>
   <packaging>jar</packaging>
   <name>Crowdin Services</name>
   <description>Crowdin Services</description>
