--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   </parent>
   <groupId>org.exoplatform.addons.crowdin</groupId>
   <artifactId>crowdin-addon</artifactId>
-  <version>5.2.x-SNAPSHOT</version>
+  <version>5.2.0</version>
   <packaging>pom</packaging>
   <name>Crowdin Addon</name>
   <description>Crowdin Addon</description>
@@ -40,7 +40,7 @@
   <scm>
     <connection>scm:git:git://github.com/exo-addons/crowdin.git</connection>
     <developerConnection>scm:git:git@github.com:exo-addons/crowdin.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>5.2.0</tag>
     <url>https://github.com/exo-addons/crowdin</url>
   </scm>
   <properties>
