--- a/extension/pom.xml
+++ b/extension/pom.xml
@@ -23,11 +23,11 @@
   <parent>
     <artifactId>crowdin-addon</artifactId>
     <groupId>org.exoplatform.addons.crowdin</groupId>
-    <version>6.4.x-SNAPSHOT</version>
+    <version>6.4.0</version>
   </parent>
   <groupId>org.exoplatform.addons.crowdin</groupId>
   <artifactId>crowdin-extension</artifactId>
-  <version>6.4.x-SNAPSHOT</version>
+  <version>6.4.0</version>
   <packaging>war</packaging>
   <name>Crowdin Extension</name>
   <description>Crowdin Extension</description>
